--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,3 +1,11 @@
+.overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 3;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
 .slides-navigation {
   z-index: 6;
 }
